# mapclientplugins.filelocationsinkstep

./: README.md  README.rst  pyproject.toml  setup.py
docs/: conf.py  index.rst
mapclientplugins/filelocationsinkstep/: __init__.py  configuredialog.py  resources_rc.py  step.py  ui_configuredialog.py
mapclientplugins/filelocationsinkstep/qt/: configuredialog.ui  resources.qrc
