[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mapclientplugins.filelocationsinkstep"
authors = [
    {name = "Richard Christie"},
]
description = ""
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
]
dynamic = ["version", "dependencies"]

[project.urls]
Repository = "https://github.com/mapclient-plugins/mapclientplugins.filelocationsinkstep"

[tool.setuptools.dynamic]
version = {attr = "mapclientplugins.filelocationsinkstep.__version__"}
dependencies = {file = ["requirements.txt"]}